src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_skip_tests_coverage.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: test --skip=tests/coverage
---
[Test] test::Tidy
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/tidy})
[Test] test::Ui
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/ui)
[Test] test::Crashes
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/crashes)
[Test] test::MirOpt
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/mir-opt)
[Test] test::CodegenLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/codegen-llvm)
[Test] test::CodegenUnits
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/codegen-units)
[Test] test::AssemblyGcc
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/assembly-gcc)
[Test] test::AssemblyLlvm
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/assembly-llvm)
[Test] test::Incremental
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/incremental)
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/debuginfo)
[Test] test::UiFullDeps
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/ui-fulldeps)
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-html)
[Test] test::CoverageRunRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/coverage-run-rustdoc)
[Test] test::Pretty
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/pretty)
[Test] test::CodegenCranelift
    targets: [x86_64-unknown-linux-gnu]
    - Set({compiler/rustc_codegen_cranelift})
[Test] test::CodegenGCC
    targets: [x86_64-unknown-linux-gnu]
    - Set({compiler/rustc_codegen_gcc})
[Test] test::Crate
    targets: [aarch64-unknown-linux-gnu]
    - Set({library/alloc})
    - Set({library/alloctests})
    - Set({library/compiler-builtins/compiler-builtins})
    - Set({library/core})
    - Set({library/coretests})
    - Set({library/panic_abort})
    - Set({library/panic_unwind})
    - Set({library/proc_macro})
    - Set({library/rustc-std-workspace-core})
    - Set({library/std})
    - Set({library/std_detect})
    - Set({library/sysroot})
    - Set({library/test})
    - Set({library/unwind})
[Test] test::CrateLibrustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({compiler})
    - Set({compiler/rustc})
    - Set({compiler/rustc_abi})
    - Set({compiler/rustc_arena})
    - Set({compiler/rustc_ast})
    - Set({compiler/rustc_ast_ir})
    - Set({compiler/rustc_ast_lowering})
    - Set({compiler/rustc_ast_passes})
    - Set({compiler/rustc_ast_pretty})
    - Set({compiler/rustc_attr_ir})
    - Set({compiler/rustc_attr_parsing})
    - Set({compiler/rustc_baked_icu_data})
    - Set({compiler/rustc_borrowck})
    - Set({compiler/rustc_builtin_macros})
    - Set({compiler/rustc_codegen_llvm})
    - Set({compiler/rustc_codegen_ssa})
    - Set({compiler/rustc_const_eval})
    - Set({compiler/rustc_crate_store})
    - Set({compiler/rustc_data_structures})
    - Set({compiler/rustc_driver})
    - Set({compiler/rustc_driver_impl})
    - Set({compiler/rustc_error_codes})
    - Set({compiler/rustc_error_messages})
    - Set({compiler/rustc_errors})
    - Set({compiler/rustc_expand})
    - Set({compiler/rustc_expand_queries})
    - Set({compiler/rustc_feature})
    - Set({compiler/rustc_fs_util})
    - Set({compiler/rustc_graphviz})
    - Set({compiler/rustc_hashes})
    - Set({compiler/rustc_hir})
    - Set({compiler/rustc_hir_analysis})
    - Set({compiler/rustc_hir_id})
    - Set({compiler/rustc_hir_pretty})
    - Set({compiler/rustc_hir_typeck})
    - Set({compiler/rustc_incremental})
    - Set({compiler/rustc_index})
    - Set({compiler/rustc_index_macros})
    - Set({compiler/rustc_infer})
    - Set({compiler/rustc_interface})
    - Set({compiler/rustc_lexer})
    - Set({compiler/rustc_lint})
    - Set({compiler/rustc_lint_defs})
    - Set({compiler/rustc_llvm})
    - Set({compiler/rustc_log})
    - Set({compiler/rustc_macros})
    - Set({compiler/rustc_metadata})
    - Set({compiler/rustc_middle})
    - Set({compiler/rustc_mir_build})
    - Set({compiler/rustc_mir_dataflow})
    - Set({compiler/rustc_mir_transform})
    - Set({compiler/rustc_monomorphize})
    - Set({compiler/rustc_next_trait_solver})
    - Set({compiler/rustc_parse})
    - Set({compiler/rustc_parse_format})
    - Set({compiler/rustc_passes})
    - Set({compiler/rustc_pattern_analysis})
    - Set({compiler/rustc_privacy})
    - Set({compiler/rustc_proc_macro})
    - Set({compiler/rustc_public})
    - Set({compiler/rustc_public_bridge})
    - Set({compiler/rustc_query_impl})
    - Set({compiler/rustc_resolve})
    - Set({compiler/rustc_sanitizers})
    - Set({compiler/rustc_serialize})
    - Set({compiler/rustc_session})
    - Set({compiler/rustc_span})
    - Set({compiler/rustc_structures})
    - Set({compiler/rustc_symbol_mangling})
    - Set({compiler/rustc_target})
    - Set({compiler/rustc_thread_pool})
    - Set({compiler/rustc_trait_selection})
    - Set({compiler/rustc_traits})
    - Set({compiler/rustc_transmute})
    - Set({compiler/rustc_ty_utils})
    - Set({compiler/rustc_ty_walk})
    - Set({compiler/rustc_type_ir})
    - Set({compiler/rustc_type_ir_macros})
    - Set({compiler/rustc_windows_rc})
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/librustdoc, src/tools/rustdoc})
[Test] test::CrateRustdocJsonTypes
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/rustdoc-json-types})
[Test] test::CrateBootstrap
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/coverage-dump})
    - Set({src/tools/jsondoclint})
    - Set({src/tools/replace-version-placeholder})
    - Set({tidyselftest})
[Test] test::RemoteTestClientTests
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/remote-test-client})
[Test] test::Linkcheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/linkchecker})
[Test] test::TierCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/tier-check})
[Test] test::RustAnalyzer
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-analyzer})
[Test] test::ErrorIndex
    targets: [x86_64-unknown-linux-gnu]
    - Set({error-index})
    - Set({src/tools/error_index_generator})
[Test] test::RustdocBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/doc/rustdoc})
[Test] test::UnstableBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/doc/unstable-book})
[Test] test::RustcBook
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/doc/rustc})
[Test] test::StdarchVerify
    targets: [x86_64-unknown-linux-gnu]
    - Set({library/stdarch/crates/stdarch-verify})
[Test] test::StdarchGenCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({stdarch-gen-check})
[Test] test::RustdocJSStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-js-std)
[Test] test::RustdocJSNotStd
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-js)
[Test] test::RustdocTheme
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rustdoc-themes})
[Test] test::RustdocUi
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-ui)
[Test] test::RustdocJson
    targets: [x86_64-unknown-linux-gnu]
    - Suite(tests/rustdoc-json)
[Test] test::HtmlCheck
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/html-checker})
[Test] test::RustInstaller
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-installer})
[Test] test::TestFloatParse
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/test-float-parse})
[Test] test::RunMake
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/run-make)
[Test] test::RunMakeCargo
    targets: [aarch64-unknown-linux-gnu]
    - Suite(tests/run-make-cargo)
[Test] test::IntrinsicTest
    targets: [x86_64-unknown-linux-gnu]
    - Set({intrinsic-test})
    - Set({library/stdarch/crates/intrinsic-test})
